app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';
@custom-variant dark (&:is(.dark *));

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--font-sans: var(--font-geist-sans);
	--font-mono: var(--font-geist-mono);
	--color-sidebar-ring: var(--sidebar-ring);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar: var(--sidebar);
	--color-chart-5: var(--chart-5);
	--color-chart-4: var(--chart-4);
	--color-chart-3: var(--chart-3);
	--color-chart-2: var(--chart-2);
	--color-chart-1: var(--chart-1);
	--color-ring: var(--ring);
	--color-input: var(--input);
	--color-border: var(--border);
	--color-destructive: var(--destructive);
	--color-accent-foreground: var(--accent-foreground);
	--color-accent: var(--accent);
	--color-muted-foreground: var(--muted-foreground);
	--color-muted: var(--muted);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-secondary: var(--secondary);
	--color-primary-foreground: var(--primary-foreground);
	--color-primary: var(--primary);
	--color-popover-foreground: var(--popover-foreground);
	--color-popover: var(--popover);
	--color-card-foreground: var(--card-foreground);
	--color-card: var(--card);
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
}

:root {
	--radius: 0.625rem;
	--background: oklch(100% 0 0deg);
	--foreground: oklch(14.5% 0 0deg);
	--card: oklch(100% 0 0deg);
	--card-foreground: oklch(14.5% 0 0deg);
	--popover: oklch(100% 0 0deg);
	--popover-foreground: oklch(14.5% 0 0deg);
	--primary: oklch(20.5% 0 0deg);
	--primary-foreground: oklch(98.5% 0 0deg);
	--secondary: oklch(97% 0 0deg);
	--secondary-foreground: oklch(20.5% 0 0deg);
	--muted: oklch(97% 0 0deg);
	--muted-foreground: oklch(55.6% 0 0deg);
	--accent: oklch(97% 0 0deg);
	--accent-foreground: oklch(20.5% 0 0deg);
	--destructive: oklch(57.7% 0.245 27.325deg);
	--border: oklch(92.2% 0 0deg);
	--input: oklch(92.2% 0 0deg);
	--ring: oklch(70.8% 0 0deg);
	--chart-1: oklch(64.6% 0.222 41.116deg);
	--chart-2: oklch(60% 0.118 184.704deg);
	--chart-3: oklch(39.8% 0.07 227.392deg);
	--chart-4: oklch(82.8% 0.189 84.429deg);
	--chart-5: oklch(76.9% 0.188 70.08deg);
	--sidebar: oklch(98.5% 0 0deg);
	--sidebar-foreground: oklch(14.5% 0 0deg);
	--sidebar-primary: oklch(20.5% 0 0deg);
	--sidebar-primary-foreground: oklch(98.5% 0 0deg);
	--sidebar-accent: oklch(97% 0 0deg);
	--sidebar-accent-foreground: oklch(20.5% 0 0deg);
	--sidebar-border: oklch(92.2% 0 0deg);
	--sidebar-ring: oklch(70.8% 0 0deg);
}

.dark {
	--background: oklch(14.5% 0 0deg);
	--foreground: oklch(98.5% 0 0deg);
	--card: oklch(20.5% 0 0deg);
	--card-foreground: oklch(98.5% 0 0deg);
	--popover: oklch(20.5% 0 0deg);
	--popover-foreground: oklch(98.5% 0 0deg);
	--primary: oklch(92.2% 0 0deg);
	--primary-foreground: oklch(20.5% 0 0deg);
	--secondary: oklch(26.9% 0 0deg);
	--secondary-foreground: oklch(98.5% 0 0deg);
	--muted: oklch(26.9% 0 0deg);
	--muted-foreground: oklch(70.8% 0 0deg);
	--accent: oklch(26.9% 0 0deg);
	--accent-foreground: oklch(98.5% 0 0deg);
	--destructive: oklch(70.4% 0.191 22.216deg);
	--border: oklch(100% 0 0deg / 10%);
	--input: oklch(100% 0 0deg / 15%);
	--ring: oklch(55.6% 0 0deg);
	--chart-1: oklch(48.8% 0.243 264.376deg);
	--chart-2: oklch(69.6% 0.17 162.48deg);
	--chart-3: oklch(76.9% 0.188 70.08deg);
	--chart-4: oklch(62.7% 0.265 303.9deg);
	--chart-5: oklch(64.5% 0.246 16.439deg);
	--sidebar: oklch(20.5% 0 0deg);
	--sidebar-foreground: oklch(98.5% 0 0deg);
	--sidebar-primary: oklch(48.8% 0.243 264.376deg);
	--sidebar-primary-foreground: oklch(98.5% 0 0deg);
	--sidebar-accent: oklch(26.9% 0 0deg);
	--sidebar-accent-foreground: oklch(98.5% 0 0deg);
	--sidebar-border: oklch(100% 0 0deg / 10%);
	--sidebar-ring: oklch(55.6% 0 0deg);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}

	body {
		@apply bg-background text-foreground;
	}
}

.disable-transition *,
::after,
::before {
	transition: none !important;
}

